2014-10-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Node Line Requirements, Writing a Menu):
	menu entries need exact spacing for the sake of Emacs Info.

2014-10-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_search): Call 
	info_indices_of_file_buffer before prompting user.  Display an 
	error message if no index is found.
	(info_virtual_index): Match error message to that used 
	elsewhere.
	* info/t/no-index.sh, info/t/index-completing.sh: New tests.

	* info/echo-area.c (info_read_and_dispatch_in_echo_area): 
	Recalculate line map after each user command.
	(input_line, input_line_prompt): Comments added.
	[FD_SET && hpux, FD_SET && !hpux] (fd_set_cast): Remove unused 
	macro.
	* info/window.c (window_point_to_column): Return left-most 
	column for multi-column characters.

2014-10-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_search): Don't duplicate a string 
	just to free the original.
	(look_in_indices): Save search string in 'index_search'.
	(info_index_apropos, info_virtual_index): Prompt with and 
	default to the last search string.

2014-10-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/cr-tag-table.sh: New test.

2014-10-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c: Don't include sys/ioctl.h.

	* info/infomap.c (fetch_user_maps): Don't print an error message 
	if ".infokey" wasn't found.  Report from Karl Berry.

	* info/info.c (main) <--all>: If only one match, don't display a 
	menu of matches (this is what happened before).
	* info/t/all-only.sh: New test.

	* info/terminal.c (initialize_byte_map): Add byte sequences 
	beginning ESC [ and ESC O representing cursor keys.  Previously 
	these byte sequences were present in 
	default_emacs_like_info_keys before changes on 2014-06-28.

	* configure.ac: Remove use of AC_HEADER_TIOCGWINSZ.  Add 
	"sys/ioctl.h" to argument of AC_CHECK_HEADERS.
	* info/termdep.h: Make include of sys/ioctl.h conditional on 